[gd_scene load_steps=16 format=2]

[ext_resource path="res://main_scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://auxiliary_scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://auxiliary_scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://main_scenes/game_ui.gd" type="Script" id=4]
[ext_resource path="res://visitor.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://gfx/boss_bar_bg.png" type="Texture" id=6]
[ext_resource path="res://gfx/boss_bar_fg.png" type="Texture" id=7]
[ext_resource path="res://auxiliary_scenes/pause.tscn" type="PackedScene" id=8]
[ext_resource path="res://auxiliary_scenes/Sound_Manager.tscn" type="PackedScene" id=9]
[ext_resource path="res://auxiliary_scenes/Bullets_Manager.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.188235, 0.172549, 0.180392, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="DynamicFont" id=2]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=3]

default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=5]

default_font = SubResource( 4 )

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Background" parent="." index="0" instance=ExtResource( 2 )]

[node name="space" type="Node2D" parent="." index="1"]

[node name="Player" parent="space" index="0" instance=ExtResource( 3 )]

position = Vector2( 240, 320 )
_sections_unfolded = [ "Transform" ]

[node name="enemies" type="Node" parent="space" index="1"]

[node name="player_bullets" type="Node" parent="space" index="2"]

[node name="enemy_bullets" type="Node" parent="space" index="3"]

[node name="loot_bullets" type="Node" parent="space" index="4"]

[node name="game_ui" type="Container" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Pause" ]

[node name="Panel" type="Panel" parent="game_ui" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 480.0
margin_right = 640.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 1 )
_sections_unfolded = [ "Material", "custom_styles" ]

[node name="distanceL" type="Label" parent="game_ui/Panel" index="0"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 150.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 3 )
text = "distance"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="distance" type="Label" parent="game_ui/Panel" index="1"]

modulate = Color( 0.223529, 0.470588, 0.658824, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 30.0
margin_right = 150.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 3 )
text = "distance"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="hpL" type="Label" parent="game_ui/Panel" index="2"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 70.0
margin_right = 150.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 3 )
text = "HP"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="hp" type="Label" parent="game_ui/Panel" index="3"]

modulate = Color( 0.662745, 0.231373, 0.231373, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 90.0
margin_right = 150.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 3 )
text = "HP"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="specialL" type="Label" parent="game_ui/Panel" index="4"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 130.0
margin_right = 150.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 3 )
text = "special"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="special" type="Label" parent="game_ui/Panel" index="5"]

modulate = Color( 0.556863, 0.278431, 0.54902, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 150.0
margin_right = 150.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 3 )
text = "special"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="cargo_spaceL" type="Label" parent="game_ui/Panel" index="6"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 190.0
margin_right = 150.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 3 )
text = "accuracy"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="cargo_space" type="Label" parent="game_ui/Panel" index="7"]

modulate = Color( 0.443137, 0.666667, 0.203922, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 210.0
margin_right = 150.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 3 )
text = "cargo space"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="cargoL" type="Label" parent="game_ui/Panel" index="8"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 250.0
margin_right = 150.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 3 )
text = "cargo"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="cargo" type="Label" parent="game_ui/Panel" index="9"]

modulate = Color( 0.956863, 0.705882, 0.105882, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 270.0
margin_right = 150.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 3 )
text = "cargo"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="fps" type="Label" parent="game_ui/Panel" index="10"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -480.0
margin_top = 20.0
margin_right = -440.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="bullet_counter" type="Label" parent="game_ui/Panel" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 620.0
margin_right = 150.0
margin_bottom = 634.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="boss_hp" type="TextureProgress" parent="game_ui" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 6 )
texture_over = null
texture_progress = ExtResource( 7 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures", "custom_styles" ]

[node name="boss_attack" type="Label" parent="game_ui/boss_hp" index="0"]

modulate = Color( 0.87451, 0.964706, 0.956863, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 16.0
margin_right = 470.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 5 )
text = "bomb"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="pause" parent="." index="3" instance=ExtResource( 8 )]

visible = false
position = Vector2( 240, 320 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="Sound_Manager" parent="." index="4" instance=ExtResource( 9 )]

[node name="Bullets_Manager" parent="." index="5" instance=ExtResource( 10 )]


